<resources>
    <string name="attendanceKey">K!R:|A*J$P*</string>
    <string name="permission_required">Required Permssion to access it</string>
    <string name="allow">ALLOW</string>
    <string name="location_req">Required for PolicyBoss Pro to get Location </string>
    <string name="empty_directory">Empty Directory</string>
    <string name="NoConnection">No Internet Connection</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="myaccount_update"> Please update your profile photo.</string>
    <string name="oauth_note">Kindly Click on "Login via App" on PolicyBoss.com website.Please enter this App Code on PolicyBoss.com and Submit to Login.\n\n<b>This generated App Code is valid only for next 15 minutes.</b></string>
    <string name="title_activity_home">Home</string>
    <string name="camera_access_required">Camera access is required to display the camera.</string>
    <string name="signup">Not a Member? <b><u>Sign up now!</u></b></string>
    <string name="clickhere"><b><u>Click Here</u></b></string>
    <string name="settings">please go to  <b><u>settings.</u></b></string>
    <string name="threedots">&#8942;</string>
    <string name="disclosure"><b><u>DISCLOSURE</u></b></string>
    <string name="popup_Profile"> PROFILE PICTURE</string>
    <string name="popup_PanCard"> FBA PAN CARD</string>
    <string name="popup_CancelCHQ"> CANCELLED CHQ</string>
    <string name="popup_AadharCard"> FBA AADHAR CARD</string>
    <string name="popup1_PHOTO"> RECENT PHOTOGRAPH</string>
    <string name="popup1_PanCard"> RECENT PAN CARD</string>
    <string name="popup1_AadharCardFont"> RECENT AADHAR CARD FRONT</string>
    <string name="popup1_AadharCardBack"> RECENT AADHAR CARD BACK</string>
    <string name="popup1_CancelCHQ"> RECENT CANCELLED CHQ</string>
    <string name="popup1_HighestEdu"> RECENT HIGHEST EDU. PROOF </string>
    <string name="file_provider_authority" translatable="false">com.policyboss.policybosspro.fileprovider</string>
    <string name="Emp_detail">Employment &amp; Income Details</string>
    <string name="RM_Calling">Do you want to call/mail to your: </string>
    <string name="NineHundredNinetyNine">Pro Membership(\u20B9 999)</string>
    <string name="TwoHundredNinetyNine">Lite Membership(\u20B9 299)</string>
    <string name="NinetyNine">Lite Membership(\u20B9 99)</string>
    <string name="FM_Contact">Hello, Welcome to Finmart Whatsapp chat.\nyou can use this to communicate with us,\nto allow press Add to Contact</string>
    <string name="Finmart"> Finmart </string>
    <string name="verify_SSID">Your SSID is not created / synced.\nPlease contact techsupport@policyboss.com </string>
    <string name="Support_Calling">Do you want to call Support Team. </string>
    <string name="materail_count">new Images are available for downloading.\nContinue???</string>
    <string name="view"><b><u>View</u></b></string>
    <string name="fetching_msg">Please Wait... fetching quotes</string>
    <string name="UltraLakshyaAlone"> STAND-ALONE BENEFITS OF LIC\'s JEEVAN LAKSHYA</string>
    <string name="UltraLakshyaDeath"> DEATH BENEFITS PAYABLE TO NOMINEE</string>
    <string name="UltraLakshyaProdCombo"> PRODUCT COMBO INFORMATION </string>
    <string name="UltraLakshyaBenefitIllustratoe">BENEFITS ILLUSTRATION OF LIC\'s JEEVAN LAKSHYA</string>
    <string name="UltraLakshyaBenefitPayable">Benefits payable to nominee in case of death in year</string>
    <string name="UltraLakshyaBenefitPayable_Terms">* including guaranteed and non-guaranteed benefits.</string>
    <string name="UltraLakshyaJeevanVsLakshya">LIC JEEVAN LAKSHYA v/s ULTRA LAKSHYA</string>
    <string name="UltraLakshyaScenario">SAMPLE SCENARIO OF BENEFITS ON DEATH</string>
    <string name="UltraLakshyaHdr1">Presenting <b> <font color='#f79f00'>Ultra Lakshya - </font></b> a unique solution specially crafted for you by blending
     <b> <font color='#f79f00'>LIC\'s Jeevan Lakshya </font></b>  and <b> <font color='#f79f00'>HDFC Life\'s Click2Protect 3D  </font></b> product.</string>
    <string name="UltraLakshyaHdr">Presenting Ultra Lakshya - a unique solution specially crafted for you by blending LIC\'s Jeevan Lakshya and HDFC Life\'s Click2Protect 3D product.</string>
    <string name="buyHdfc"> <b><u> BUY HDFC NOW</u></b></string>
    <string name="motorInfo">  Please insert the Vehicle Number here if you have issued the policy from PolicyBoss Pro last year and are renewing the same. This will enable your proposal form to be auto filled. </string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_private_car_detail">Motor Insurance</string>
    <string name="title_activity_register">REGISTER AS ASSOCIATE</string>
    <string name="title_myaccount">MY ACCOUNT</string>
    <string name="title_pospenrollment">POSP ENROLLMENT</string>
    <string name="title_activity_add_new_quote">Add Quote</string>
    <string name="title_activity_quote">Quotes</string>
    <string name="title_activity_common_web_view">Web View</string>
    <string name="title_activity_premium_break_up">Premium Details</string>
    <string name="title_activity_personal_loan_detail">PERSONAL LOAN</string>
    <string name="title_activity_home_loan_detail">HOME LOAN</string>
    <string name="title_activity_home_loan_quote">HOME LOAN</string>
    <string name="title_activity_lap_loan_detail">LOAN AGAINST PROPERTY</string>
    <string name="title_activity_lap_loan_quote">LOAN AGAINST PROPERTY</string>
    <string name="title_activity_personal_loan_apply">PERSONAL LOAN</string>
    <string name="title_activity_plmain">PERSONAL LOAN</string>
    <string name="title_activity_home_loan_apply">HOME LOAN</string>
    <string name="title_activity_input_quote_bottm">Motor Insurance</string>
    <string name="title_activity_hlmain">HOME LOAN</string>
    <string name="title_activity_balance_transfer_detail">BALANCE TRANSFER</string>
    <string name="title_activity_blmain">BALANCE TRANSFER</string>
    <string name="title_activity_personal_loan_apply_web_view">PERSONAL LOAN</string>
    <string name="title_activity_home_loan_apply_web_view">HOME LOAN</string>
    <string name="title_activity_lapmain">LOAN AGAINST PROPERTY</string>
    <string name="title_activity_lapapply">LOAN AGAINST PROPERTY</string>
    <string name="title_activity_lapapply_web_view">LOAN AGAINST PROPERTY</string>
    <string name="title_activity_two_wheeler_quote_app">Two Wheeler</string>
    <string name="title_activity_bike_add_quote">Two Wheeler</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="title_activity_health_member_details_dialog">" "</string>
    <string name="title_activity_health_check_up_plans">HEALTH CHECK UP PLANS</string>
    <string name="title_activity_eula">Agreement</string>
    <string name="title_activity_knowledge_guru">KNOWLEDGE GURU</string>
    <string name="knowledge_guru_header">WELCOME TO KNOWLEDGE BANK \nFOR ALL THAT YOU NEED</string>
    <string name="title_activity_knowledge_guru_webview">Knowledge Guru</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_under_construction">PolicyBoss Pro</string>
    <string name="title_activity_whats_new">WHAT\'S NEW</string>
    <string name="title_activity_help_feed_back">HELP &amp; FEEDBACK</string>
    <string name="title_activity_contact_us">CONTACT US</string>
    <string name="title_activity_about_us">ABOUT US</string>
    <string name="title_activity_sales_material">CUSTOMER COMM.</string>
    <string name="title_activity_credit_card">"Credit Card"</string>
    <string name="title_activity_rblcredit_apply">RBL Credit card</string>
    <string name="title_activity_applied_credit_list">Credit Card</string>
    <string name="title_activity_raise_ticket">RAISE A TICKET</string>
    <string name="title_activity_add_ticket">RAISE A TICKET</string>
    <string name="title_activity_share_quote_activity">Share</string>
    <string name="icici_terms_con">I hereby confirm that I have read and understood the Rupeeboss Terms and Conditions applicable to this service and that all the details furnished by me above are true and correct. I further provide consent to Rupeeboss and its affiliates to contact me with reference to financial products and this consent shall override any registration with DNC/NDNC.</string>
    <string name="express_rbl_terms_con">I authorize RBL Bank to contact me. This will override registry on DND / NDNC *</string>
    <string name="title_activity_quick_lead">Quick Lead</string>
    <string name="title_activity_balance_transfer_loan_apply">Balance Transfer Loan Apply Activity</string>
    <string name="title_activity_health_compare">Compare</string>
    <string name="title_activity_balance_transfer_personal_apply">
      Personal Loan - Balance Transfer  Activity
    </string>
    <string name="title_activity_term_quote_application">Life Insurance</string>
    <string name="title_activity_term_selection">TERM INSURANCE</string>
    <string name="title_activity_term_icici">ICICI PRUDENTIAL</string>
    <string name="forgot_password"><u><i>Forgot Password?</i></u></string>
    <string name="title_activity_bank_loan_list">Bank Loan</string>
    <string name="title_activity_compare_ti_activity">COMPARE TERM INSURANCE</string>
    <string name="title_activity_icici_term">ICICI PRUDENTIAL</string>
    <string name="title_activity_hdfc_term">HDFC PERSONAL LOAN</string>
    <string name="title_activity_kotak_term">KOTAK PERSONAL LOAN</string>
    <string name="skin_walkthrogh">Already have an account? <b>Login</b></string>
    <string name="sell_everything_digitally">Sell everything <b>DIGITALLY !!!</b></string>
    <string name="welcome_slide_1_text">India’s first and most comprehensive business enabling platform for Insurance advisors/Posps</string>
    <string name="title_activity_health_check_up_list">HEALTH CHECK UP PLANS</string>
    <string name="title_activity_early_salary">Early Salary</string>
    <string name="mps_popup_text">Congratulations and welcome to the PolicyBoss Pro Family. As our privileged associate, you are eligible to an exclusive Magic Platinum Subscription (MPS) for </string>
    <string name="know_more_mps_desc">Magic Platinum Subscription (MPS) is an exclusive offer from Datatcomp, available to Finmart Business Associates only. In this subscrition you pay ₹
        </string>
    <string name="know_more_mps_desc_2"> to use Datacomp\'s following four premium applications FREE:</string>
    <string name="title_activity_lead_info_popup">Lead Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_pospuser">ADD  SUB USER</string>
    <string name="title_activity_notification_sms">NOTIFICATION SMS</string>
    <string name="title_activity_generate_lead">GENERATE LEAD</string>
    <string name="title_activity_income_potential">Income Calculator</string>
    <string name="title_activity_nav_transactionhistory">TRANSACTION HISTORY</string>
    <string name="title_activity_contact_lead">Create Lead from Contact</string>
    <string name="title_activity_attendance_registraion">Registration</string>
    <string name="title_activity_scan_vehicle">SCAN VEHICLE</string>
    <string name="title_activity_vehicle_scan">SCAN VEHICLE</string>
    <string name="term">Terms &amp; Conditions  |  </string>
    <string name="privacy">Privacy Policy.</string>
    <string name="no_internet">No internet connection!</string>
    <string name="check_network">Please check your internet connection and try again</string>
    <string name="retry">RETRY</string>
</resources>