<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="18dp"

    app:cardCornerRadius="@dimen/_16dp"
    android:layout_margin="@dimen/_40dp"

    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"

        android:padding="15dp">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/no_internet_image"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/nointernet"/>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:gravity="center"
        android:text="@string/no_internet"
        style="@style/TextViewStyle.BannerBold"
        android:textSize="18sp"

        android:textColor="@color/colorText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"

        android:gravity="center"
        android:text="@string/check_network"
        style="@style/TextViewStyle.Large"
        android:textColor="@color/darkGray" />

    <ProgressBar
        android:id="@+id/progessBar"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="10dp"

        android:layout_width="32dp"
        android:layout_height="32dp"
        android:indeterminate="true"
        android:visibility="invisible"
         />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/retry_button"
        android:paddingStart="22dp"
        android:paddingTop="4dp"
        android:paddingEnd="22dp"
        android:paddingBottom="4dp"
        android:text="@string/retry"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/blue"
        android:textStyle="bold" />
</androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>