<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:orientation="vertical"
    tools:context=".syncContact.Worker.WelcomeSyncContactActivity">


<androidx.viewpager.widget.ViewPager
    android:id="@+id/view_pager"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="70" />


<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:alpha=".5"
    android:background="@android:color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:orientation="vertical"
        android:id="@+id/ll_term"
        android:visibility="visible">



        <TextView
            android:id="@+id/txtterm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"

            android:text="@string/term"
            android:textAppearance="@style/TextViewStyle.Large"
            android:textColor="@color/blue" />


        <TextView
            android:id="@+id/txtprivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextViewStyle.Large"
            android:textColor="@color/blue"
            android:text="@string/privacy"
             />

        <CheckBox
            android:layout_marginTop="12dp"
            style="@style/TextViewStyle.Medium"
            android:id="@+id/chkagree"
            android:gravity="top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I hereby agree to the terms and conditions for using Sync Contacts and give access to my phone contacts and call logs"
            android:checked="false"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="20"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_next"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/twelve"
        android:background="@drawable/custome_curveborder_blue"
        android:text="Next"
        android:textColor="@color/button_color" />

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:src="@drawable/indicator_active" />

        <ImageView
            android:id="@+id/dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:src="@drawable/unselected_dot" />

        <ImageView
            android:id="@+id/dot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:src="@drawable/unselected_dot" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutDots"
        android:background="@null"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/skin_walkthrogh"
        android:visibility="gone"/>
</LinearLayout>
</LinearLayout>